# personal_vault

./: .env.default  .gitconfig  .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  ENV_SETUP.md  PLAN.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.prod.yml  ecosystem.config.js  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.pm2/: touch
apps/file-explorer/: Cargo.toml  manifest.json  package.json
apps/file-explorer/src/: app.rs  lib.rs  main.rs  renderer.rs
backend/: API_ENDPOINTS.md  Cargo.toml  Config.toml  Dockerfile  Dockerfile.dev
backend/docs/adapters/: README.md  http.md  landlock.md  postgresql.md  webauthn.md
backend/examples/platform_file_explorer/: README.md  main.py
backend/examples/webrtc_poc/: Cargo.toml  README.md  client.html
backend/examples/webrtc_poc/src/: main.rs
backend/migrations/2025-01-01-000001_initial_schema/: down.sql  up.sql
backend/migrations/2026-02-18-000002_create_invitations_and_permissions/: down.sql  up.sql
backend/migrations/2026-02-19-000003_create_sessions_table/: up.sql
backend/src/: main.rs
backend/src/adapters/: mod.rs
backend/src/adapters/http/: auth.rs  files.rs  mod.rs  static_files.rs
backend/src/application/: mod.rs  ports.rs
backend/src/application/client/: commands.rs  mod.rs  queries.rs
backend/src/application/client/commands/: README.md  cancel_access_request.md  complete_webauthn_registration.md  initiate_webauthn_registration.md  launch_application.rs  list_my_permissions.rs  request_access.md  request_session_termination.md  start_session.md  video_session.rs
backend/src/application/client/queries/: README.md  get_my_access_requests.md  get_my_accessible_files.md  get_my_active_session.md  get_my_credentials.md
backend/src/application/invite/: complete_webauthn_registration.rs  initiate_webauthn_registration.rs  mod.rs  view_invitation.rs
backend/src/application/owner/: commands.rs  mod.rs  queries.rs
backend/src/application/owner/commands/: README.md  approve_access_request.md  create_folder.md  create_invitation.md  create_invitation.rs  delete_file.md  deny_access_request.md  download_file.md  list_permissions.rs  move_file.md  rename_file.md  revoke_invitation.md  revoke_permission.rs  terminate_session.md  update_session_settings.md  upload_file.md
backend/src/application/owner/queries/: README.md  get_active_sessions.md  get_file_activity.md  get_file_permissions.md  get_my_files.md  get_pending_access_requests.md  get_storage_usage.md
backend/src/application/ports/: application_ports.rs  challenge_repository.rs  credential_repository.rs  file_permission_repository.rs  invitation_repository.rs  mod.rs  session_repository.rs  user_repository.rs  video_ports.rs
backend/src/application/super_admin/: commands.rs  mod.rs  queries.rs
backend/src/application/super_admin/commands/: README.md  complete_webauthn_login.rs  complete_webauthn_registration.rs  delete_user.md  disable_user.md  enable_user.md  force_terminate_session.md  initiate_webauthn_login.rs  initiate_webauthn_registration.rs  register_user.md  update_user_quota.md
backend/src/application/super_admin/queries/: README.md  get_active_sessions.md  get_all_users.md  get_audit_logs.md  get_system_stats.md
backend/src/domain/: aggregates.rs  entities.rs  mod.rs
backend/src/domain/aggregates/: application_session.rs  mod.rs  user_aggregate.rs  video_session.rs
backend/src/domain/apps/: file_explorer.rs  mod.rs
backend/src/domain/entities/: credential.rs  file_permission.rs  invitation.rs  mod.rs  session.rs  user.rs
backend/src/domain/events/: credential_added.rs  domain_event.rs  mod.rs  user_activated.rs  user_logged_in.rs  user_registered.rs  user_suspended.rs
backend/src/domain/value_objects/: display_name.rs  email.rs  mod.rs  user_id.rs  user_role.rs  user_status.rs
backend/src/driving/http/: check_setup_status.rs
backend/src/infrastructure/: filesystem.rs  messaging.rs  mod.rs  persistence.rs
backend/src/infrastructure/driven/: mod.rs  storage.rs
backend/src/infrastructure/driven/application_launcher/: mod.rs
backend/src/infrastructure/driven/input/: mod.rs  x11_input.rs  xdotool.rs
backend/src/infrastructure/driven/ipc/: mod.rs  socket_server.rs
backend/src/infrastructure/driven/persistence/: challenge_repository.rs  credential_repository.rs  db_types.rs  file_permission_repository.rs  invitation_repository.rs  mod.rs  schema.rs  session_repository.rs  user_repository.rs  video_session_repo.rs
backend/src/infrastructure/driven/sandbox/: cgroups.rs  ffmpeg.rs  gstreamer.rs  isolation.rs  landlock.rs  mod.rs  native_runtime.rs  seccomp.rs  wasm_runtime.rs  xvfb.rs
backend/src/infrastructure/driving/: mod.rs  webrtc.rs
backend/src/infrastructure/driving/http/: application_routes.rs  auth.rs  files.rs  mod.rs  video_api.rs
backend/src/infrastructure/driving/http/client/: mod.rs  my_permissions.rs
backend/src/infrastructure/driving/http/invite/: complete.rs  initiate.rs  mod.rs  view.rs
backend/src/infrastructure/driving/http/middleware/: auth.rs  mod.rs
backend/src/infrastructure/driving/http/owner/: invitations.rs  mod.rs  permissions.rs
backend/src/infrastructure/persistence/: challenge_repository.rs  credential_repository.rs  user_repository.rs
crates/sandbox-app-sdk/: Cargo.toml
docs/: API.md  APPLICATION_BEHAVIOR.md  APPLICATION_PLATFORM.md  ARCHITECTURE.md  COMMANDS.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_COMPOSE.md  DOMAIN_OBJECTS.md  PASSWORDLESS.md  PERSONAS.md  QUERIES.md  REQUIREMENTS.md  REVERSE_PROXY_DECISION.md  SECURITY.md  TESTING.md  TRACEABILITY.md  WEBRTC_POC_PLAN.md
docs/agents/: architect.md  developper.md  product.md  security.md
frontend/web/: Dockerfile.dev  FRONTEND_ARCHITECTURE.md  MIGRATION.md  index.html  package-lock.json  package.json  vite.config.ts
haproxy/: haproxy.cfg
scripts/: dev-start.sh  dev-stop.sh  generate-secrets.js  generate-secrets.sh  prod-start.sh  setup-env.js
shared/: Cargo.toml
shared/src/: lib.rs  (+1 more)
(+22 files in other folders)
