[workspace]
members = ["backend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sandbox Team"]

[[bin]]
name = "sandbox-server"
path = "src/main.rs"

[[bin]]
name = "create-user"
path = "src/bin/create_user.rs"
required-features = []

[lib]
name = "sandbox_server"
path = "src/lib.rs"
