[workspace]
members = ["backend", "shared", "apps/file-explorer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sandbox Team"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
