[package]
name = "sandbox-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Your Name <you@example.com>"]
description = "Secure WebRTC-based sandbox server for isolated application access"
license = "MIT"
repository = "https://github.com/yourorg/secure-sandbox-server"
keywords = ["webrtc", "sandbox", "security", "streaming"]
categories = ["web-programming", "multimedia", "network-programming"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
async-trait = "0.1"

# WebRTC
webrtc = "0.9"
bytes = "1.5"

# WebSocket
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }

# Redis for WebAuthn challenge storage
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Authentication (Passwordless)
webauthn-rs = { version = "0.4", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.4"
jsonwebtoken = "9.2"

# Cryptography
rand = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# URL parsing
url = "2.5"

# Environment variables
dotenvy = "0.15"

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for testing)
reqwest = { version = "0.11", features = ["json"] }

# Email
lettre = "0.11"

# Landlock LSM
landlock = "0.3"

# X11 for input injection
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xtest"] }

[dev-dependencies]
# Testing
testcontainers = "0.15"
mockall = "0.12"
proptest = "1.4"
