[package]
name = "sandbox-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Your Name <you@example.com>"]
description = "Secure WebRTC-based sandbox server for isolated application access"
license = "MIT"
repository = "https://github.com/yourorg/secure-sandbox-server"
keywords = ["webrtc", "sandbox", "security", "streaming"]
categories = ["web-programming", "multimedia", "network-programming"]

[dependencies]
# Shared protocol
shared = { path = "../shared" }

# GStreamer for video encoding
gstreamer = { version = "0.22", features = ["v1_22"] }
gstreamer-app = "0.22"

# WASM runtime
wasmtime = "29"

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# WebRTC
webrtc = "0.9"

# WebSocket
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }

libc = "0.2"

# Redis for WebAuthn challenge storage
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Authentication (Passwordless)
webauthn-rs = { version = "0.4", features = ["danger-allow-state-serialisation"] }
jsonwebtoken = "9.2"

# Cryptography
rand = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# URL parsing
url = "2.5"

# Error handling
anyhow = "1.0"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
