[package]
name = "sandbox-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Your Name <you@example.com>"]
description = "Secure WebRTC-based sandbox server for isolated application access"
license = "MIT"
repository = "https://github.com/yourorg/secure-sandbox-server"
keywords = ["webrtc", "sandbox", "security", "streaming"]
categories = ["web-programming", "multimedia", "network-programming"]

[dependencies]
ctrlc = "3"
# Shared protocol
shared = { path = "../shared" }

# GStreamer for video encoding
gstreamer = { version = "0.24", features = ["v1_22"] }
gstreamer-app = "0.24"


# Native runtime dependencies
nix = { version = "0.31", features = ["mman", "fs", "socket", "process"] }

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# WebRTC
webrtc = "0.17"

# WebSocket
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
diesel = { version = "2.2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.2"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }

libc = "0.2"

# Redis for WebAuthn challenge storage
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# Authentication (Passwordless)
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

# Async trait macro
async-trait = "0.1"

# X11 input injection via XTEST
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xtest"] }

chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# URL parsing
url = "2.5"

# Error handling
anyhow = "1.0"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
