futures-util = "0.3"
[package]
name = "file-explorer"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../../shared" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = "0.3"
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = "0.25"
base64 = "0.22"

libc = "0.2"
futures-util = "0.3.31"
