[package]
name = "file-explorer"
version.workspace = true
edition.workspace = true

# Prevent auto-discovery of main.rs as a binary target
autobins = false


[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"


[dependencies]
egui = "0.29"
epaint = "0.29"
once_cell = "1.19"
serde.workspace = true
serde_json.workspace = true
