[package]
name = "file-explorer"
version.workspace = true
edition.workspace = true

autobins = false

[[bin]]
name = "file_explorer"
path = "src/main.rs"

[dependencies]
egui = "0.29"
sandbox-app-sdk = { path = "../../crates/sandbox-app-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
