[package]
name = "webrtc-poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webrtc-poc"
path = "src/main.rs"

[dependencies]
# WebRTC
webrtc = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
thiserror = "1"

[dev-dependencies]
